Add complete DocsPage template system and distribution
Introduces a comprehensive documentation template system with interactive setup, configuration, and cleanup scripts. Adds a ready-to-distribute package in 'docspage-template-dist/' including all core app files, documentation structure, and supporting scripts. Updates and expands all documentation (README, GETTING_STARTED, TEMPLATE_SETUP), and adds a complete system overview (TEMPLATE_COMPLETE.md).

--- a/template.config.json
+++ b/template.config.json
@@ -4,31 +4,31 @@
   "description": "A modern, responsive documentation template with search, navigation, and theming",
   "author": "Template Author",
   "variables": {
-    "PROJECT_NAME": "Your Project Name",
-    "PROJECT_DESCRIPTION": "A brief description of what your project does and why it's useful",
-    "PROJECT_LOGO": "🚀",
-    "PROJECT_LOGO_TEXT": "Your Project",
-    "SITE_TITLE": "Your Project Documentation",
-    "GITHUB_URL": "https://github.com/yourusername/yourproject",
-    "GITHUB_USERNAME": "yourusername",
-    "GITHUB_REPO": "yourproject",
-    "PROJECT_URL": "https://yourproject.com",
-    "API_BASE_URL": "https://api.yourproject.com",
-    "DASHBOARD_URL": "https://dashboard.yourproject.com",
-    "PRIMARY_COLOR": "#007acc",
-    "SECONDARY_COLOR": "#f8f9fa",
-    "ACCENT_COLOR": "#28a745",
-    "AUTHOR_NAME": "Your Name",
-    "AUTHOR_EMAIL": "your.email@example.com",
-    "LICENSE": "MIT",
-    "VERSION": "1.0.0",
-    "PACKAGE_MANAGER": "npm",
-    "INSTALL_COMMAND": "npm install your-project-name",
-    "RUN_COMMAND": "npx your-project-name",
-    "MAIN_LANGUAGE": "JavaScript",
-    "RUNTIME_REQUIREMENT": "Node.js 16+",
-    "MIN_MEMORY": "4GB",
-    "MIN_STORAGE": "100MB"
+    "PROJECT_NAME": "{{PROJECT_NAME}}",
+    "PROJECT_DESCRIPTION": "{{PROJECT_DESCRIPTION}}",
+    "PROJECT_LOGO": "{{PROJECT_LOGO}}",
+    "PROJECT_LOGO_TEXT": "{{PROJECT_LOGO_TEXT}}",
+    "SITE_TITLE": "{{SITE_TITLE}}",
+    "GITHUB_URL": "{{GITHUB_URL}}",
+    "GITHUB_USERNAME": "{{GITHUB_USERNAME}}",
+    "GITHUB_REPO": "{{GITHUB_REPO}}",
+    "PROJECT_URL": "{{PROJECT_URL}}",
+    "API_BASE_URL": "{{API_BASE_URL}}",
+    "DASHBOARD_URL": "{{DASHBOARD_URL}}",
+    "PRIMARY_COLOR": "{{PRIMARY_COLOR}}",
+    "SECONDARY_COLOR": "{{SECONDARY_COLOR}}",
+    "ACCENT_COLOR": "{{ACCENT_COLOR}}",
+    "AUTHOR_NAME": "{{AUTHOR_NAME}}",
+    "AUTHOR_EMAIL": "{{AUTHOR_EMAIL}}",
+    "LICENSE": "{{LICENSE}}",
+    "VERSION": "{{VERSION}}",
+    "PACKAGE_MANAGER": "{{PACKAGE_MANAGER}}",
+    "INSTALL_COMMAND": "{{INSTALL_COMMAND}}",
+    "RUN_COMMAND": "{{RUN_COMMAND}}",
+    "MAIN_LANGUAGE": "{{MAIN_LANGUAGE}}",
+    "RUNTIME_REQUIREMENT": "{{RUNTIME_REQUIREMENT}}",
+    "MIN_MEMORY": "{{MIN_MEMORY}}",
+    "MIN_STORAGE": "{{MIN_STORAGE}}"
   },
   "placeholders": {
     "docs": {
